# boid

./: README.md
sky/: Node3D.gd  icon.svg.import  main.tscn  project.godot
tower/: .clang-tidy  CMakeLists.txt  CMakePresets.json  HACKING.md  README.md
tower/cmake/: dev-mode.cmake  install-rules.cmake  variables.cmake
tower/source/: lib.cpp  main.cpp
tower/test/: CMakeLists.txt
tower/test/source/: tower_test.cpp
